force-app/main/default/objects/Opportunity/fields/Bill_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Lost_Date__c</fullName>
    <label>Bill / Lost Date</label>
    <type>Date</type>
</CustomField>