force-app/main/default/objects/Opportunity/fields/Collection_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Name__c</fullName>
    <label>Collection Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Collection_Name</valueSetName>
    </valueSet>
</CustomField>