force-app/main/default/objects/Opportunity/fields/Negotiator_Points_Won__c.field-meta.xml
<CustomField>
    <fullName>Negotiator_Points_Won__c</fullName>
    <formula>IF( Owner.Id  &lt;&gt;  Senior_Negotiator__r.Id ,If((  Points_Won__c  *0.15)&gt;=75, Points_Won__c *0.15,If( Points_Won__c &lt;1,0,75)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiator Points Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>