force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <label>Opportunity / Repair Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>