force-app/main/default/objects/Opportunity/fields/Points_Exception__c.field-meta.xml
<CustomField>
    <fullName>Points_Exception__c</fullName>
    <label>Points Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>