force-app/main/default/objects/Opportunity/fields/Points_Type__c.field-meta.xml
<CustomField>
    <fullName>Points_Type__c</fullName>
    <label>Points Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Diamond</fullName>
            </value>
            <value>
                <fullName>Color Stone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>