force-app/main/default/objects/Opportunity/fields/Points_Won__c.field-meta.xml
<CustomField>
    <fullName>Points_Won__c</fullName>
    <formula>IF( ISPICKVAL( Points_Exception__c , &quot;N/A&quot;) , ( IF(  ISPICKVAL( Points_Type__c , &quot;Gold&quot;)  , 0.001 *  Won_Value__c ,   IF(ISPICKVAL( Points_Type__c , &quot;Diamond&quot;), 0.002 *  Won_Value__c,  IF( ISPICKVAL( Points_Type__c , &quot;Color Stone&quot;) , 0.003 *  Won_Value__c , 0) )   ) ), (IF( ISPICKVAL( Points_Exception__c , &quot;Discount&quot;) , ( IF(  ISPICKVAL( Points_Type__c , &quot;Gold&quot;)  , 0.001 *  Won_Value__c ,   IF(ISPICKVAL( Points_Type__c , &quot;Diamond&quot;), 0.002 *  Won_Value__c,  IF( ISPICKVAL( Points_Type__c , &quot;Color Stone&quot;) , 0.003 *  Won_Value__c , 0) )   ) ),0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Points Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>