force-app/main/default/objects/Opportunity/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <displayFormat>O-{0}</displayFormat>
    <label>Serial</label>
    <type>AutoNumber</type>
</CustomField>