force-app/main/default/objects/Opportunity/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Jewelry_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Style</valueSetName>
    </valueSet>
</CustomField>