force-app/main/default/objects/Opportunity/validationRules/Bill_Date_Importance.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_Date_Importance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  OR(ISPICKVAL( StageName , &quot;Delivered&quot;),ISPICKVAL( StageName , &quot;Cancelled&quot;) )  , ISBLANK(   TEXT( Bill_Lost_Date__c )   ) )</errorConditionFormula>
    <errorDisplayField>Bill_Lost_Date__c</errorDisplayField>
    <errorMessage>Enter the Bill / Lost Date</errorMessage>
</ValidationRule>