force-app/main/default/objects/Opportunity/validationRules/Bill_No_Importance.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_No_Importance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( StageName , &quot;Delivered&quot;)  , ISBLANK(  Bill_No__c  ) )</errorConditionFormula>
    <errorDisplayField>Bill_No__c</errorDisplayField>
    <errorMessage>Enter the Bill No.</errorMessage>
</ValidationRule>