force-app/main/default/objects/Opportunity/validationRules/Lost_Value_Importance.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Value_Importance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  OR(ISPICKVAL( StageName , &quot;Delivered&quot;),ISPICKVAL( StageName , &quot;Cancelled&quot;))  , ISBLANK( TEXT(  Lost_Value__c  ) ) )</errorConditionFormula>
    <errorDisplayField>Lost_Value__c</errorDisplayField>
    <errorMessage>Enter the Lost Value</errorMessage>
</ValidationRule>