force-app/main/default/objects/Opportunity/validationRules/Points_Type_Importance.validationRule-meta.xml
<ValidationRule>
    <fullName>Points_Type_Importance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  OR(ISPICKVAL( StageName , &quot;Delivered&quot;),ISPICKVAL( StageName , &quot;Cancelled&quot;))  , ISBLANK(   TEXT(  Points_Type__c  )   ) )</errorConditionFormula>
    <errorDisplayField>Points_Type__c</errorDisplayField>
    <errorMessage>Enter the Points  Type</errorMessage>
</ValidationRule>