force-app/main/default/objects/Opportunity/validationRules/Won_Value_Importance.validationRule-meta.xml
<ValidationRule>
    <fullName>Won_Value_Importance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  OR(ISPICKVAL( StageName , &quot;Delivered&quot;),ISPICKVAL( StageName , &quot;Cancelled&quot;))  , ISBLANK( TEXT( Won_Value__c ) ) )</errorConditionFormula>
    <errorDisplayField>Won_Value__c</errorDisplayField>
    <errorMessage>Enter the Won Value</errorMessage>
</ValidationRule>